--- a/custom-news-api/package.json
+++ b/custom-news-api/package.json
@@ -24,7 +24,10 @@
     "bcrypt": "3.0.4",
     "body-parser": "1.18.3",
     "express": "4.16.4",
+    "express-session": "1.15.6",
     "lowdb": "1.0.0",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
     "uuid": "3.3.2"
   }
 }
