--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 */node_modules/
+/bower_components
+/config/ember-try.js
+/dist
+/tests
+/tmp
+**/.gitkeep
+.bowerrc
+.editorconfig
+.ember-cli
+.gitignore
+.eslintrc.js
+.watchmanconfig
+.travis.yml
+bower.json
+ember-cli-build.js
+testem.js
