--- a/custom-news-api/package.json
+++ b/custom-news-api/package.json
@@ -23,8 +23,11 @@
   "dependencies": {
     "bcrypt": "3.0.4",
     "body-parser": "1.18.3",
+    "cors": "2.8.5",
     "express": "4.16.4",
     "express-session": "1.15.6",
+    "https": "1.0.0",
+    "jsonwebtoken": "8.5.0",
     "lowdb": "1.0.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
